--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap');
+@layer base {
+  #root {
+    @apply flex flex-col h-screen;
+  }
+}
 
 @layer utilities {
   .text-style-3 {
@@ -14,11 +20,11 @@
   }
 
   .text-style-10 {
-    @apply font-montserrat font-bold text-xl -tracking-[0.18px] text-[#888];
+    @apply font-montserrat font-bold text-xl -tracking-[0.18px] text-[#888888];
   }
 
   .text-style-4 {
-    @apply font-roboto font-bold text-xl -tracking-[0.4px] text-[#121212];
+    @apply font-roboto font-light text-base -tracking-[0.4px] text-[#121212];
   }
 
   .text-style-2 {
@@ -44,65 +50,4 @@
 
 .active {
   opacity: 1;
-}
-
-/* .links {
-  display: flex;
-}
-
-.link {
-  font-size: 1.8rem;
-  text-decoration: none;
-  color: black;
-  padding: 1rem;
-} */
-
-main {
-  width: 80%;
-  margin: 1rem auto;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid gray;
-}
-
-.book-list-wrapper {
-  margin: 0.5rem 0;
-  padding: 0.5rem;
-}
-
-.form-wrapper {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 1rem;
-}
-
-.form-wrapper input,
-.form-wrapper select {
-  padding: 0.5rem;
-  outline: none;
-}
-
-article button {
-  padding: 0.3rem 0.5rem;
-  border: none;
-  margin-right: 0.3rem;
-}
-
-.add-btn {
-  padding: 0.5rem 1rem;
-}
-
-article {
-  border: 2px solid gray;
-  padding: 0.5rem;
-  margin: 0.3rem 0;
-}
-
-.remove-btn {
-  cursor: pointer;
-}
-
-.remove-btn:hover {
-  background-color: rgb(218, 218, 218);
 }
